--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1082,7 +1082,7 @@ form svg {
   }
 
   .logo img {
-    margin-top: 0px;
+    margin-top: -17px;
     margin-left: 35%;
     width: 75px;
     height: 42px;
@@ -1092,7 +1092,7 @@ form svg {
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 34%;
+    top: 15%;
     left: 5%;
     display: block;
   }
@@ -1115,7 +1115,7 @@ form svg {
   }
 
   .nav-scrolled {
-    height: 70px;
+    height: 50px;
     flex-direction: row-reverse;
   }
 
@@ -1146,6 +1146,7 @@ form svg {
     margin-bottom: 0;
     font-size: 16px;
     text-align: center;
+    padding: 0 5%;
   }
 
   .quality-assurance {
@@ -1156,6 +1157,7 @@ form svg {
     display: grid;
     grid-template-columns: auto auto;
     margin-top: 5%;
+    margin-left: -6%;
   }
 
   .num {
@@ -1527,6 +1529,26 @@ form svg {
 
   .form-left p {
     font-size: 15px;
+  }
+
+  .form-right {
+    background-color: #fff;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 30px 19px;
+    border-radius: 8px;
+    position: relative;
+    z-index: 1;
+  }
+
+  form input {
+    width: 320px;
+    border-radius: 8px;
+    height: 44px;
+    font-size: 20px;
+    padding: 3px 10px 3px 15px;
+    margin-top: 2%;
+    border: 1px solid #a4a4a4;
+    text-transform: lowercase;
   }
 
   .form-right-overlap {
