--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1100,7 +1100,7 @@ form svg {
   nav ul {
     display: block;
     position: absolute;
-    margin-top: 6%;
+    margin-top: 3%;
     left: -150%;
     background-color: rgb(255, 255, 255);
     height: 100vh;
@@ -1180,7 +1180,7 @@ form svg {
   .employee::after {
     content: "";
     width: 1px;
-    height: 90px;
+    height: 67px;
     border: 0.5px solid #cecece;
     position: absolute;
     top: 10%;
@@ -1203,12 +1203,12 @@ form svg {
     height: 1px;
     border: 0.5px solid #cecece;
     position: absolute;
-    bottom: -26px;
-    right: 10%;
+    top: 78px;
+    right: 14%;
   }
 
   .trust-icons-df h4 {
-    font-size: 17px;
+    font-size: 14px;
     color: #054d84;
     font-weight: bolder;
   }
@@ -1306,7 +1306,7 @@ form svg {
   }
 
   .product-option h4 {
-    font-size: 16px;
+    font-size: 14px;
   }
 
   .product {
@@ -1447,7 +1447,7 @@ form svg {
   }
 
   .review {
-    margin-top: 65%;
+    margin-top: 75%;
   }
 
   .review-df {
