--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -44,7 +44,7 @@ body {
 }
 
 header {
-  z-index: 1000;
+  z-index: 1;
   position: sticky;
   top: 0;
   display: flex;
@@ -53,29 +53,9 @@ header {
   padding: 21px 3px 4px 3px;
   width: 100%;
   transition: all 0.2s ease-in;
-
+  background-color: #fff;
   box-shadow: rgba(246, 165, 102, 0.25) 0px 13px 27px -5px,
     rgba(241, 208, 174, 0.3) 0px 8px 16px -8px;
-}
-
-.nav-scrolled {
-  z-index: 1000;
-  position: sticky;
-  top: 0;
-  display: flex;
-  justify-content: space-around;
-  background-color: #fff;
-  box-shadow: rgb(255 141 9 / 24%) 0px 3px 8px;
-  align-items: baseline;
-  padding: 21px 3px 4px 3px;
-  width: 100%;
-  color: #000000;
-  transition: all 0.1s ease-in;
-}
-
-.nav-scrolled nav ul li a,
-.nav-scrolled .logo {
-  color: #015fa1;
 }
 
 nav ul {
@@ -104,17 +84,15 @@ nav ul li a:hover::before {
   border: 1px solid;
   transition: all 0.1s ease;
 }
-
 #mobile-view {
   display: none;
 }
 
-.product-page-banner {
-  margin-top: 3%;
+.product-page-df {
+  margin-top: 5%;
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 5%;
+  gap: 10%;
 }
 
 .product-page-right {
@@ -123,6 +101,812 @@ nav ul li a:hover::before {
 
 .product-page-right p {
   font-size: 19px;
+  margin-top: 17px;
+  line-height: 1.4;
+}
+
+.product-page-right h1 {
+  font-size: 2rem;
+}
+
+.product-page-left button {
+  width: 80px;
+  height: 30px;
+  font-size: 18px;
+  background-color: #f96120;
+  color: #fff;
+  border: none;
+}
+.product-page-left button:hover {
+  background-color: #015fa1;
+  transition: all 0.5s ease;
+}
+
+.product-page-btn {
+  display: flex;
+  justify-content: center;
+  gap: 5%;
+  margin-top: 3%;
+}
+
+.specs-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+  text-align: center;
+  font-family: sans-serif;
+  margin-top: 5%;
+}
+
+.specs-container h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #333;
+}
+
+.specs-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+}
+
+.spec-item {
+  background: linear-gradient(to bottom, #e4f0ff, #bedbff);
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.2s ease-in-out;
+  color: #333;
+}
+
+.spec-item:hover {
+  background-color: #f5f5f5;
+}
+
+.spec-item h3 {
+  font-size: 1.3rem;
+  margin-bottom: 0.5rem;
+  font-weight: 1000;
+}
+
+.spec-item p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.design-pos {
+  position: relative;
+  background-color: aliceblue;
+  width: 100vw;
+  height: 400px;
+  border: 1px solid #000;
+}
+
+.design {
+  position: absolute;
+  top: 6%;
+  left: 14%;
+}
+
+.design-header {
+  margin-top: 6%;
+}
+
+.design-header h1 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin-left: 10%;
+}
+
+.design-images {
+  margin-top: 2%;
+  display: flex;
+  gap: 10%;
+  justify-content: center;
+}
+
+.process-steps {
+  margin-top: -9%;
+  margin-bottom: 45%;
+}
+
+.process-steps h2 {
+  font-size: 15px;
+}
+
+#discovery,
+#dispatch {
+  display: none;
+}
+
+.three-d-header-name {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 4%;
+  align-items: center;
+}
+
+.three-d-header {
+  border: 1px solid #000;
+  width: 470px;
+  text-align: center;
+}
+
+.three-d-header h1 {
+  font-size: 22px;
+  padding: 8px 3px;
+}
+
+#first h2 {
+  margin-top: 10px;
+}
+
+#first {
+  position: absolute;
+  left: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 85px;
+  height: 85px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+}
+
+@keyframes first-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.steps-first {
+  animation: first-fade 3s;
+}
+
+#first:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+#second {
+  position: absolute;
+  margin-top: 3%;
+  left: 10.3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  border: 3px dashed;
+  border-radius: 50%;
+}
+
+#second:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-second {
+  animation: second-fade 2s;
+}
+
+@keyframes second-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#third {
+  position: absolute;
+  margin-top: 1.5%;
+  left: 15.7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  border: 3px dashed;
+  border-radius: 50%;
+}
+
+#third:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-third {
+  animation: third-fade 3s;
+}
+
+@keyframes third-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#fourth {
+  padding: 8px;
+  position: absolute;
+  margin-top: -1%;
+  left: 21.1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+}
+
+#fourth:hover {
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+.steps-fourth {
+  animation: fourth-fade 4s;
+}
+
+@keyframes fourth-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#fifth {
+  padding: 8px;
+  position: absolute;
+  margin-top: 5.3%;
+  left: 24%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 112px;
+  height: 115px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+}
+
+#fifth:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-fifth {
+  animation: fifth-fade 5s;
+}
+
+@keyframes fifth-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#six {
+  padding: 8px;
+  position: absolute;
+  margin-top: 11%;
+  left: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+}
+
+#six:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-six {
+  animation: six-fade 6s;
+}
+
+@keyframes six-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#seven {
+  padding: 8px;
+  position: absolute;
+  margin-top: 8%;
+  left: 36.7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 118px;
+  height: 112px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#seven:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-seven {
+  animation: seven-fade 7s;
+}
+
+@keyframes seven-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#eight {
+  padding: 8px;
+  position: absolute;
+  margin-top: 11%;
+  left: 44.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  height: 104px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#eight:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-eight {
+  animation: eight-fade 5s;
+}
+
+@keyframes eight-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#nine {
+  padding: 8px;
+  position: absolute;
+  margin-top: 16.5%;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#nine:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-nine {
+  animation: nine-fade 6s;
+}
+
+@keyframes nine-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#ten {
+  padding: 8px;
+  position: absolute;
+  margin-top: 23.6%;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  height: 110px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#ten:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-ten {
+  animation: ten-fade 7s;
+}
+
+@keyframes ten-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#eleven {
+  padding: 8px;
+  position: absolute;
+  margin-top: 25%;
+  left: 41.7%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 121px;
+  height: 120px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#eleven:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-eleven {
+  animation: eleven-fade 7s;
+}
+
+@keyframes eleven-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#twelve {
+  padding: 8px;
+  position: absolute;
+  margin-top: 25%;
+  left: 33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 125px;
+  height: 123px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#twelve:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-twelve {
+  animation: twelve-fade 8s;
+}
+
+@keyframes twelve-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#thirteen {
+  padding: 8px;
+  position: absolute;
+  margin-top: 23%;
+  left: 25.1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 115px;
+  height: 113px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#thirteen:hover {
+  transform: scale(1.1);
+  transition: all 1s ease;
+}
+
+.steps-thirteen {
+  animation: thirteen-fade 13s;
+}
+
+@keyframes thirteen-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#fourteen {
+  padding: 8px;
+  position: absolute;
+  margin-top: 31.4%;
+  left: 49%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  height: 103px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#fourteen:hover {
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+.steps-fourteen {
+  animation: fourteen-fade 10s;
+}
+
+.process-header h1 {
+  text-align: center;
+  font-size: 3rem;
+  margin-top: 15%;
+  margin-bottom: 5%;
+}
+
+@keyframes fourteen-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#fifteen {
+  padding: 8px;
+  position: absolute;
+  margin-top: 44%;
+  left: 39.9%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 140px;
+  height: 136px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#fifteen:hover {
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+.steps-fifteen {
+  animation: fifteen-fade 7s;
+}
+
+@keyframes fifteen-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#sixteen {
+  padding: 8px;
+  position: absolute;
+  margin-top: 43%;
+  left: 31.6%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 116px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#sixteen:hover {
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+.steps-sixteen {
+  animation: sixteen-fade 6s;
+}
+
+@keyframes sixteen-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#seventeen {
+  padding: 8px;
+  position: absolute;
+  margin-top: 47%;
+  left: 24.6%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 115px;
+  height: 116px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#seventeen:hover {
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+.steps-seventeen {
+  animation: seventeen-fade 6s;
+}
+
+@keyframes seventeen-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#eighteen {
+  padding: 8px;
+  position: absolute;
+  margin-top: 54.5%;
+  left: 19.6%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 145px;
+  height: 136px;
+  border: 3px dashed;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+#eighteen:hover {
+  transform: scale(1.2);
+  transition: all 1s ease;
+}
+
+.steps-eighteen {
+  animation: eighteen-fade 5s;
+}
+
+@keyframes eighteen-fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.steps h2 {
+  text-transform: capitalize;
+  text-align: center;
+  font-size: 19px;
+  font-family: "calibri";
+}
+/* 
+#third h2 {
+  font-size: 18px;
+  line-height: 1.3;
+  text-align: center;
+}
+
+#fourth h2 {
+  line-height: 1.3;
+  font-size: 15px;
+}
+
+#seventeen h2 {
+  font-family: "calibrib";
+  font-size: 20px;
+}
+
+#thirteen h2,
+#first h2 {
+  color: #3a38b2;
+  font-family: "calibrib";
+} */
+
+.process-animation-one {
+  transform: translateX(80%);
+}
+.process-animation-two {
+  transform: translateX(-50%);
+}
+.process-animation-three {
+  transform: translateX(50%);
+}
+.process-animation-four {
+  transform: translateX(-30%);
+}
+
+.process-intersect-one {
+  transform: translateX(0);
+  transition: all 2s ease;
+}
+
+.process-intersect-two {
+  transform: translateX(0);
+  transition: all 2s ease;
+}
+
+.process-intersect-three {
+  transform: translateX(0);
+  transition: all 2s ease;
+}
+.process-intersect-four {
+  transform: translateY(0);
+  transition: all 2s ease;
 }
 
 @media screen and (max-width: 768px) {
@@ -148,7 +932,6 @@ nav ul li a:hover::before {
     background-color: rgb(255, 255, 255);
     height: 100vh;
     width: 60%;
-    z-index: 10;
     transition: all 0.4s ease;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
