--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -44,7 +44,7 @@ body {
 }
 
 header {
-  z-index: 1;
+  z-index: 2;
   position: sticky;
   top: 0;
   display: flex;
@@ -135,11 +135,11 @@ nav ul li a:hover::before {
   padding: 2rem 1rem;
   text-align: center;
   font-family: sans-serif;
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 .specs-container h2 {
-  font-size: 2rem;
+  font-size: 2.4rem;
   margin-bottom: 2rem;
   color: #333;
 }
@@ -176,10 +176,8 @@ nav ul li a:hover::before {
 
 .design-pos {
   position: relative;
-  background-color: aliceblue;
   width: 100vw;
   height: 400px;
-  border: 1px solid #000;
 }
 
 .design {
@@ -205,36 +203,83 @@ nav ul li a:hover::before {
   justify-content: center;
 }
 
+.design-sec {
+  margin-top: 10%;
+}
+
+.three-d-header.active h1 {
+  color: #f96120;
+}
+
+.three-d-header.active,
+.three-d-header.active:hover {
+  border-color: #f96120;
+  transition: border-color 0.3s ease; /* Add transition effect */
+}
+
+.three-d-header-name {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+  align-items: center;
+}
+
+.three-d-header {
+  border-bottom: 2px solid #2e79e2;
+  width: 335px;
+  text-align: center;
+}
+
+.three-d-header h1 {
+  font-size: 30px;
+  padding: 8px 3px;
+  cursor: pointer;
+  color: #437ce7;
+}
+
+.design-top-header h1 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 3%;
+}
+
 .process-steps {
   margin-top: -9%;
   margin-bottom: 45%;
+  position: relative;
+}
+
+.process-image {
+  position: absolute;
+  top: 0;
 }
 
 .process-steps h2 {
   font-size: 15px;
 }
 
-#discovery,
-#dispatch {
-  display: none;
+.process-color {
+  opacity: 0.2;
+  width: 100vw;
+  height: 100vh;
+  /* background-color: #111111; */
+  background-image: linear-gradient(30deg, #80c1ff 0%, #8bc5ff 100%);
+  position: absolute;
+  top: 70px;
 }
 
-.three-d-header-name {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 4%;
-  align-items: center;
+.process-image img {
+  width: 100vw;
+  height: 100vh;
+  margin-top: 5%;
+  opacity: 0.2;
 }
 
-.three-d-header {
-  border: 1px solid #000;
-  width: 470px;
+.process-header h1 {
   text-align: center;
-}
-
-.three-d-header h1 {
-  font-size: 22px;
-  padding: 8px 3px;
+  font-size: 3rem;
+  margin-top: 12%;
+  margin-bottom: 5%;
 }
 
 #first h2 {
@@ -455,7 +500,7 @@ nav ul li a:hover::before {
 }
 
 .steps-seven {
-  animation: seven-fade 7s;
+  animation: seven-fade 5s;
 }
 
 @keyframes seven-fade {
@@ -523,7 +568,7 @@ nav ul li a:hover::before {
 }
 
 .steps-nine {
-  animation: nine-fade 6s;
+  animation: nine-fade 5s;
 }
 
 @keyframes nine-fade {
@@ -557,7 +602,7 @@ nav ul li a:hover::before {
 }
 
 .steps-ten {
-  animation: ten-fade 7s;
+  animation: ten-fade 5s;
 }
 
 @keyframes ten-fade {
@@ -591,7 +636,7 @@ nav ul li a:hover::before {
 }
 
 .steps-eleven {
-  animation: eleven-fade 7s;
+  animation: eleven-fade 6s;
 }
 
 @keyframes eleven-fade {
@@ -625,7 +670,7 @@ nav ul li a:hover::before {
 }
 
 .steps-twelve {
-  animation: twelve-fade 8s;
+  animation: twelve-fade 6s;
 }
 
 @keyframes twelve-fade {
@@ -659,7 +704,7 @@ nav ul li a:hover::before {
 }
 
 .steps-thirteen {
-  animation: thirteen-fade 13s;
+  animation: thirteen-fade 7s;
 }
 
 @keyframes thirteen-fade {
@@ -693,14 +738,7 @@ nav ul li a:hover::before {
 }
 
 .steps-fourteen {
-  animation: fourteen-fade 10s;
-}
-
-.process-header h1 {
-  text-align: center;
-  font-size: 3rem;
-  margin-top: 15%;
-  margin-bottom: 5%;
+  animation: fourteen-fade 6s;
 }
 
 @keyframes fourteen-fade {
@@ -907,6 +945,245 @@ nav ul li a:hover::before {
 .process-intersect-four {
   transform: translateY(0);
   transition: all 2s ease;
+}
+
+.footer-follow-us span {
+  display: flex;
+  gap: 5px;
+}
+
+.footer-follow-us span svg {
+  width: 20px;
+  height: 20px;
+}
+
+.footer-follow-us span h6 {
+  font-size: 21px;
+}
+
+.footer-df {
+  display: flex;
+  justify-content: space-around;
+  padding: 3% 0;
+}
+
+.footer-contact {
+  max-width: 27%;
+  text-transform: capitalize;
+}
+
+.footer-contact b {
+  text-transform: uppercase;
+  font-family: "calibrib";
+}
+
+.footer-contact li {
+  font-size: 17px;
+  margin-top: 10px;
+  font-family: "Catamaran";
+}
+
+.footer-contact li:first-of-type {
+  margin-top: 5%;
+}
+
+.footer-follow-us {
+  margin-top: 35%;
+}
+
+.footer-icons {
+  display: flex;
+  align-items: baseline;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.fotter-servcie li {
+  margin-top: 23px;
+  font-size: 16px;
+}
+
+.fotter-servcie li:hover {
+  color: #f1850a;
+}
+
+.fotter-servcie li:first-of-type {
+  margin-top: 27%;
+}
+
+.footer h3 {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: var(--heading-font);
+}
+
+.footer-qr {
+  margin-left: -34%;
+}
+
+#footer-email {
+  text-transform: lowercase;
+}
+
+#footer-top {
+  margin-top: 5%;
+  width: 90%;
+  height: 1px;
+  border-color: #0080ff;
+}
+
+.footer-top-df {
+  display: flex;
+  justify-content: center;
+  margin-top: 2%;
+}
+
+#footer-bottom {
+  width: 90%;
+  height: 1px;
+  border-color: #0080ff;
+}
+
+.footer-bottom-df {
+  display: flex;
+  justify-content: center;
+}
+
+form input {
+  width: 350px;
+  height: 45px;
+  font-size: 20px;
+  padding: 3px 10px 3px 15px;
+  margin-top: 2%;
+  border: 1px solid #a4a4a4;
+  text-transform: lowercase;
+}
+
+form input[type="text"]::placeholder,
+form input[type="email"]::placeholder,
+form input[type="tel"]::placeholder,
+#message::placeholder {
+  color: rgb(3, 3, 3);
+  font-weight: 300;
+  font-size: 16px;
+}
+
+form svg {
+  width: 30px;
+  height: 30px;
+}
+
+#message {
+  margin-left: 1%;
+  margin-top: 20px;
+  font-size: 18px;
+  padding: 3px 10px;
+}
+
+.message-f {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 1%;
+}
+
+.submit-btn {
+  display: flex;
+  justify-content: center;
+}
+
+.submit-btn button {
+  margin-top: 25px;
+  font-size: 20px;
+  padding: 6px 20px;
+  background-color: #f96120;
+  border: none;
+  color: #fff;
+}
+
+.form-header h1 {
+  margin-top: -18px;
+  font-size: 3rem;
+  word-spacing: 0px;
+  letter-spacing: -1px;
+  font-weight: bolder;
+  font-family: var(--heading-font);
+}
+
+.message-f svg {
+  margin-top: 5%;
+}
+
+.form {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #f8f8f8;
+  padding: 6% 2% 6% 2%;
+  position: relative;
+  margin-top: 50%;
+}
+
+.form-left {
+  max-width: 30%;
+  display: flex;
+  flex-direction: column-reverse;
+  margin-top: -2%;
+}
+
+.form-right-overlap {
+  width: 400px;
+  height: 560px;
+  border-radius: 13px;
+  background-color: #15498c;
+  position: absolute;
+  top: 10%;
+  left: 59%;
+  z-index: 1;
+}
+
+.phone-f {
+  margin-top: 20px;
+  margin-left: -5px;
+}
+
+.form-top {
+  margin-left: -2%;
+}
+
+.email-f {
+  margin-top: 5%;
+}
+
+.message-f {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+  margin-left: -7px;
+}
+
+.company-name-f {
+  margin-top: 20px;
+  margin-left: -5px;
+}
+
+.form-left p {
+  font-size: 18px;
+  margin-top: 15px;
+}
+
+.form-left img {
+  width: 250px;
+  height: 250px;
+  margin-top: -8%;
+}
+
+.form-right {
+  background-color: #fff;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 30px 50px;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
 }
 
 @media screen and (max-width: 768px) {
