--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -135,7 +135,7 @@ nav ul li a:hover::before {
   padding: 2rem 1rem;
   text-align: center;
   font-family: sans-serif;
-  margin-top: 10%;
+  margin-top: 7%;
 }
 
 .specs-container h2 {
@@ -174,12 +174,82 @@ nav ul li a:hover::before {
   line-height: 1.5;
 }
 
-.design-pos {
+.three-d-models {
+  display: flex;
+  justify-content: center;
+  padding: 3% 0;
+  gap: 3%;
+}
+
+.model-df {
+  width: 300px;
+  height: 350px;
+  display: flex;
+  gap: 2%;
+}
+
+.three-d-models > div li {
+  margin-top: 10px;
+  color: #e1dede;
+  position: relative;
+}
+
+.three-d-models > div li::after {
+  content: "";
+  width: 3px;
+  height: 3px;
+  background-color: #efefef;
+  border-radius: 20px;
+  border: 1px solid #efefef;
+  position: absolute;
+  left: -14px;
+  top: 6px;
+}
+
+.model-left h1 {
+  transform: rotate(272deg);
+  font-size: 2rem;
+}
+
+.model-left {
+  background-color: #959595;
+  display: flex;
+  align-items: center;
+  width: 50px;
+  justify-content: center;
+  color: #fff;
+}
+
+.model-right {
+  background-color: #7e7e7e;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5% 5% 5% 10%;
+}
+
+#discover .model-left {
+  background-color: #4c7bb0;
+}
+
+#discover .model-right {
+  background-color: #07509a;
+}
+
+#delivery .model-left {
+  background-color: #da7b64;
+}
+
+#delivery .model-right {
+  background-color: #c84f30;
+}
+
+/* .design-pos {
   position: relative;
   width: 100vw;
   height: 400px;
-}
-
+} */
+/* 
 .design {
   position: absolute;
   top: 6%;
@@ -204,9 +274,9 @@ nav ul li a:hover::before {
 }
 
 .design-sec {
-  margin-top: 10%;
-}
-
+  margin-top: 8%;
+} */
+/* 
 .three-d-header.active h1 {
   color: #f96120;
 }
@@ -214,13 +284,13 @@ nav ul li a:hover::before {
 .three-d-header.active,
 .three-d-header.active:hover {
   border-color: #f96120;
-  transition: border-color 0.3s ease; /* Add transition effect */
+  transition: border-color 0.3s ease; 
 }
 
 .three-d-header-name {
   display: flex;
   justify-content: center;
-  /* gap: 8%; */
+  gap: 8%;
   margin-top: 3%;
   align-items: center;
 }
@@ -236,7 +306,7 @@ nav ul li a:hover::before {
   padding: 8px 3px;
   cursor: pointer;
   color: #437ce7;
-}
+} */
 
 .design-top-header h1 {
   font-size: 2.5rem;
