--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,19 @@
 
 body {
   overflow-x: hidden;
+  animation: transitionIn 0.9s;
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: rotateX(-10deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: rotateX(0);
+  }
 }
 
 .cursor-dot {
@@ -765,7 +778,6 @@ form svg {
   font-size: 18px;
   margin-top: 5px;
 }
-
 
 .form-left p {
   font-size: 18px;
