--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -13,6 +13,19 @@
 
 body {
   overflow-x: hidden;
+  animation: transitionIn 0.9s;
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: rotateX(-10deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: rotateX(0);
+  }
 }
 
 @font-face {
@@ -174,6 +187,10 @@ nav ul li a:hover::before {
   line-height: 1.5;
 }
 
+.design-sec {
+  margin-top: 6%;
+}
+
 .three-d-models {
   display: flex;
   justify-content: center;
@@ -181,15 +198,21 @@ nav ul li a:hover::before {
   gap: 3%;
 }
 
+.models img {
+  position: absolute;
+  margin-left: -19px;
+}
+
 .model-df {
-  width: 300px;
+  width: 295px;
   height: 350px;
   display: flex;
   gap: 2%;
+  margin-top: 20%;
 }
 
 .three-d-models > div li {
-  margin-top: 10px;
+  margin-top: 14px;
   color: #e1dede;
   position: relative;
 }
@@ -315,7 +338,7 @@ nav ul li a:hover::before {
 }
 
 .process-steps {
-  margin-top: -9%;
+  margin-top: -4%;
   margin-bottom: 45%;
   position: relative;
 }
